# applied-data-science-courcework

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/definition/const/: core.py  prefect.py  task.py
src/definition/enum/: backoff_mode.py  causality_computation_status.py  ess_json_field.py  round.py
src/definition/p_model/: causality_adjacency_matrix.py  ess_causality.py  ess_divergence.py  ess_variable_data.py
src/main/: main.py
src/parser/: ess_codebook_parser.py  zip_up.py
src/pipeline/flow/: causality_analysis_flow.py
src/pipeline/task/: adjacency_matrix.py  adjacent_matrix.py  granger_causality.py  js_divergence.py  read_write.py
src/util/: backoff.py
test/: contest.py  test_causality_analysis_flow.py  test_core.py
test/fake/: fake_ess_variable_data.py
test/fake/cache/: FR_divergences.jsonl  UK_divergences.jsonl  js_divergence_test.jsonl
test/fake/data/: FR_variables.json  UK_variables.json  fake_ess_variable_data.json
test/fake/result/: FR_causality_lag2.csv  UK_causality_lag2.csv  granger_causality_results_test_lag2.csv
