[project]
name = "analyst"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.2.3,<3.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "aiocsv (>=1.3.2,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "prefect (>=3.2.9,<4.0.0)",
    "polars (>=1.24.0,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "faker (>=37.0.0,<38.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "main", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
